feat(standard): 标准版本记录展示真实操作人